--- a/Score-keeper.html
+++ b/Score-keeper.html
@@ -5,30 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score keeper</title>
-    <style>
-        .winner{
-            color: green;
-        }
-        .loser{
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-    <h1><span id="p1Display">0</span>to<span id="p2Display">0</span></h1>
-    <select name="" id="playto">Play till
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-    </select>
-    <button id="p1Button">+1 Player one</button>
-    <button id="p2Button">+1 Player Two</button>
-    <button id="reset">Reset</button>
+    <section class="section"></section>
+        <div class="container">
+            <div class="columns">
+                <div class="column is-half is-offset-one-quarter">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-2by1">
+                                <img src="Tennis.jpg" alt="">
+                            </figure>
+                        </div>
+                        <header class="card-header">
+                        <p class="card-header-title">
+                            Score Keeper
+                        </p>
+                        </header>
+                        <div class="card-content">
+                        <div class="content">
+                            <h1 class="is-size-1"><span id="p1Display">0</span>to<span id="p2Display">0</span></h1>
+                            <p class="subtitle">Use the below buttons to keep score</p>
+                            <label for="playto" class="label is-large is-inline">Playing Till</label>
+                            <div class="select is-rounded">
+                                <select name="" id="playto">
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
+                        </div>
+                        </div>
+                        <footer class="card-footer">
+                            <button id="p1Button" class="button is-primary card-footer-item is-large">+1 Player one</button>
+                            <button id="p2Button" class="button is-info card-footer-item is-large">+1 Player Two</button>
+                            <button id="reset" class="button is-danger card-footer-item is-large">Reset</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="Score-keeper.js"></script>
 </body>
 </html>
